--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>H33-Lesson 04 Example Project</h1>
     <p>Now you can see how you can quickly grab a complete project that is put online by someone on Github and have your own copy on your local machine !</p>
-
+    <h2>Celeste Chapter 3 Why is it Like That</h2>
     <img src="its-magic-shocked.gif"/>
 
 </body>
